--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,13 @@
             android:layout_centerInParent="true"
             android:text="jump2"
             />
+        <Button
+            android:id="@+id/btn_jump3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="jump3"
+            />
     </RelativeLayout>
 
 </FrameLayout>
